--- a/src/layouts/index.less
+++ b/src/layouts/index.less
@@ -2,13 +2,14 @@
   height: 100vh;
   flex: 1;
   width: calc(100% - 256px);
-  overflow-y: scroll;
+  // overflow-y: scroll;
   overflow-x: hidden;
 }
 
 .content {
   padding: 24px;
   min-height: calc(100% - 72px);
+  overflow: hidden;
   overflow-y: scroll;
 }
 
