--- a/src/components/Loader/index.less
+++ b/src/components/Loader/index.less
@@ -49,12 +49,12 @@
     letter-spacing: 4px;
     color: #000;
   }
-}
-.hidden {
-  display: none;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 1s ease 0.5s, z-index 0.1s ease 1.5s;
+
+  &.hidden {
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 1s ease 0.5s, z-index 0.1s ease 1.5s;
+  }
 }
 @keyframes spinner {
   0% {
