--- a/src/components/CTable/index.less
+++ b/src/components/CTable/index.less
@@ -1,7 +1,6 @@
-.table {
-  :global {
-    .ant-table td {
-      white-space: nowrap;
-    }
+:global {
+  .ant-table-tbody > tr > td {
+    display: table-cell;
+    vertical-align: middle;
   }
 }
