--- a/src/global.less
+++ b/src/global.less
@@ -129,12 +129,12 @@ a {
   -webkit-backface-visibility: hidden;
 }
 ::-webkit-scrollbar {
-  width: 5px;
-  height: 5px;
+  width: 10px;
+  height: 10px;
 }
 ::-webkit-scrollbar-track-piece {
   background-color: rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 6px;
+  // -webkit-border-radius: 6px;
 }
 ::-webkit-scrollbar-thumb:vertical {
   height: 5px;
